[package]
name = "cmb-logger"
version = "0.1.1"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Logger for CITA. Only use for CMB"
homepage = "https://github.com/cryptape/cita-logger"
repository = "https://github.com/cryptape/cita-logger"
license = "Apache-2.0"

[dependencies]
log = "0.4.3"
log4rs = "1.2"
crossbeam-channel = "0.5"
signal-hook = "0.3"
chrono = "0.4"
libc = "0.2"
